comand line added

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bluebird": "^3.5.4",
     "ioredis": "^4.9.0",
-    "uuid": "^3.3.2"
+    "table": "^5.2.3",
+    "uuid": "^3.3.2",
+    "vorpal": "^1.12.0"
   }
 }
